--- a/src/main/resources/templates/noticeBoard/noticeDetail.html
+++ b/src/main/resources/templates/noticeBoard/noticeDetail.html
@@ -26,7 +26,12 @@
         </div>
             <th:block class="card-body" th:text="${board.content}"/>
 
-        <a th:if="${board.filePath != null}" th:href="@{${board.filePath}}">다운</a>
+<!--        <a th:if="${board.filePath != null}" th:href="@{${board.filePath}}">다운</a>-->
+        <br>
+        <th:block th:if="${board.fileName}">
+            <img th:src="${board.filePath}" alt="ㅎㅎ">
+        </th:block>
+
         <div class="col-lg-6 col-sm-12 text-lg-end text-center">
             <a type="button" th:href="@{/board/modify(id=${board.id})}" class="btn btn-primary">수정</a>
             <button type="submit" class="btn btn-primary ">삭제</button>
