--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
 
-    <a th:href="@{/member/regMember}" class="btn btn-warning">회원 가입</a>
+    <a th:href="@{/member/regMember}" class="btn btn-warning me-3">회원 가입</a>
 
 </div>
 
