--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -5,6 +5,28 @@
     <meta charset="UTF-8">
     <title>회원 정보</title>
     <th:block th:replace="layouts/layout :: css"/>
+    <style>
+
+        form{
+            margin-left: 40%;
+            width: 50%;
+            margin-top: 20px;
+        }
+
+        .button{
+            background-color: #0a53be;
+            border: none;
+            color: white;
+            padding: 8px 17px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 15px;
+            font-size: 16px;
+            margin: 5px 1px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <th:block th:replace="fragments/header :: header"/>
@@ -16,22 +38,23 @@
         </div>
         <div>
             <label th:for="userName">이름</label>
-            <input type="text" th:name="userName" >
+            <input type="text" th:name="userName" th:value="${member.userName}">
         </div>
         <div>
             <label th:for="password">암호</label>
-            <input type="password" th:name="password">
+            <input type="password" th:name="password" >
         </div>
         <div>
             <label th:for="email">이메일</label>
-            <input type="email" th:name="email" >
+            <input type="email" th:name="email" th:value="${member.email}">
         </div>
         <div>
             <label th:for="phoneNumber">전화번호</label>
-            <input type="text" th:name="phoneNumber" >
+            <input type="text" th:name="phoneNumber" th:value="${member.phoneNumber}">
         </div>
-        <button type="submit" class="btn btn-primary" value="회원등록">수정</button>
-        <a class="btn btn-warning" th:href="@{/member/delete(id=${member.id})}">회원 삭제</a>
+        <button type="submit" class="button" value="회원등록">수정</button>
+        <a class="button" th:href="@{/member/list}">목록</a>
+        <a class="btn btn-danger" th:href="@{/member/delete(id=${member.id})}">회원 삭제</a>
     </form>
 </body>
 </html>
