--- a/src/main/resources/templates/member/regMember.html
+++ b/src/main/resources/templates/member/regMember.html
@@ -5,14 +5,37 @@
     <meta charset="UTF-8">
     <title>회원가입</title>
     <th:block th:replace="layouts/layout::css"/>
-</head>
-<body>
+    <style>
 
-<div th:replace="fragments/header :: header"></div>
+        form{
+            margin-left: 40%;
+            width: 50%;
+            margin-top: 20px;
+        }
+
+        .button{
+            background-color: #0a53be;
+            border: none;
+            color: white;
+            padding: 8px 17px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 15px;
+            font-size: 16px;
+            margin: 5px 1px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+<div class="" th:replace="fragments/header :: header"></div>
+
 <form th:action="@{/member/regMember}" method="post">
     <div>
         <label th:for="userName">이름</label>
-        <input type="text" th:name="userName" >
+        <input type="text" th:name="userName" ><br>
     </div>
     <div>
         <label th:for="userId">아이디</label>
@@ -30,8 +53,11 @@
         <label th:for="phoneNumber">전화번호</label>
         <input type="text" th:name="phoneNumber" >
     </div>
-    <button type="submit" class="btn btn-primary" value="회원등록">회원가입</button>
+    <button type="submit" class="button" value="회원등록">회원가입</button>
+    <a th:href="@{/member/list}" class="button">목록</a>
 </form>
+
+
 <div th:replace="fragments/footer :: footer"></div>
 
 
