--- a/src/main/resources/templates/noticeBoard/noticeList.html
+++ b/src/main/resources/templates/noticeBoard/noticeList.html
@@ -14,6 +14,10 @@
         margin-top: 40px;
     }
 
+    .write-btn{
+        margin-bottom: 10px;
+    }
+
 </style>
 
 <body>
@@ -22,7 +26,7 @@
 
 <div class="layout">
 <a th:href="@{/board/list}" class="text-decoration-none text-black"> <h2>공지사항</h2></a>
-    <a class="btn btn-primary text-decoration-none" type="button" th:href="@{/board/insert}">글쓰기</a>
+
     <form th:action="@{/board/list}" method="get">
         <input type="text" id="searchKeyword" name="searchKeyword">
         <button class="btn btn-sm btn-primary" type="submit">검색</button>
@@ -48,8 +52,9 @@
             </tr>
             </tbody>
         </table>
+    <a class="btn btn-primary text-decoration-none write-btn float-end" type="button" th:href="@{/board/insert}">글쓰기</a>
     <ul class="pagination justify-content-center">
-            <a th:if="${currentPage != startPage}" class="page-link" th:href="@{/board/list(page=${currentPage -2},searchKeyword=${param.searchKeyword})}" aria-label="Previous">
+        <a th:if="${currentPage != startPage}" class="page-link" th:href="@{/board/list(page=${currentPage -2},searchKeyword=${param.searchKeyword})}" aria-label="Previous">
                 <span aria-hidden="true">이전</span>
             </a>
         <th:block th:each="page : ${#numbers.sequence(startPage,endPage)}">
@@ -60,8 +65,8 @@
             <span  aria-hidden="true">다음</span>
         </a>
     </ul>
-    <a th:href="@{board/list(page=${page}, searchKeyword=${param.searchKeyword})}"></a>
 
+<!--    <a th:href="@{board/list(page=${page}, searchKeyword=${param.searchKeyword})}"></a>-->
 </div>
 
 
