--- a/src/main/resources/templates/member/regMember.html
+++ b/src/main/resources/templates/member/regMember.html
@@ -32,29 +32,34 @@
 <body>
 <div class="" th:replace="fragments/header :: header"></div>
 
-<form th:action="@{/member/regMember}" method="post">
+<form th:action="@{/member/regMember}" th:object="${memberDTO}" method="post">
+    <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+        <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
+    </div>
     <div>
         <label th:for="userName">이름</label>
-        <input type="text" th:name="userName" ><br>
+        <input type="text" th:field="*{userName}"><br>
     </div>
     <div>
         <label th:for="userId">아이디</label>
-        <input type="text" th:name="userId" >
+        <input type="text" th:field="*{userId}">
     </div>
     <div>
         <label th:for="password">암호</label>
-        <input type="password" th:name="password">
+        <input type="password" th:field="*{password}">
     </div>
     <div>
         <label th:for="email">이메일</label>
-        <input type="email" th:name="email" >
+        <input type="email" th:field="*{email}" >
     </div>
     <div>
         <label th:for="phoneNumber">전화번호</label>
-        <input type="text" th:name="phoneNumber" >
+        <input type="text" th:field="*{phoneNumber}" >
     </div>
     <button type="submit" class="button" value="회원등록">회원가입</button>
     <a th:href="@{/member/list}" class="button">목록</a>
+
+
 </form>
 
 
