--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 
 
     <div th:fragment="header">
@@ -35,7 +36,8 @@
                         <div class="d-flex" role="search">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page" href="#">로그인</a>
+                                    <a sec:authorize="isAnonymous()" class="nav-link active text-white" aria-current="page" th:href="@{/member/login}">로그인</a>
+                                    <a sec:authorize="isAuthenticated()" class="nav-link active text-white" aria-current="page" th:href="@{/member/logout}">로그아웃</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active text-white" aria-current="page" th:href="@{/member/list}">회원목록</a>
