--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -42,7 +42,7 @@
         </div>
         <div>
             <label th:for="password">암호</label>
-            <input type="password" th:name="password" >
+            <input type="password" th:name="password" th:value="${member.password}" readonly>
         </div>
         <div>
             <label th:for="email">이메일</label>
