--- a/src/main/resources/templates/noticeBoard/noticeInsert.html
+++ b/src/main/resources/templates/noticeBoard/noticeInsert.html
@@ -25,22 +25,25 @@
 <body>
 <th:block th:replace="fragments/header :: header"/>
 <div class="layout">
-    <form th:action="@{/board/insert}" method="post" class="gy-2 gx-3 align-items-center" enctype="multipart/form-data">
+    <form th:action="@{/board/insert}" method="post" th:object="${noticeDTO}" class="gy-2 gx-3 align-items-center" enctype="multipart/form-data">
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
+        </div>
         <div class="col-auto">
             <label th:for="title">제목</label>
-            <input type="text" class="form-control" th:id="title" th:name="title">
+            <input type="text" class="form-control" th:field="*{title}">
             <br>
         </div>
         <div class="col-auto">
             <label th:for="title">작성자</label>
-            <input type="text" class="form-control" th:id="author" th:name="author">
+            <input type="text" class="form-control"  th:field="*{author}">
             <br>
         </div>
         <br>
         <div class="col-auto">
             <label th:for="content">내용</label>
             <div class="input-group">
-                <textarea class="form-control" th:id="content" th:name="content" cols="30" rows="10" ></textarea>
+                <textarea class="form-control" cols="30" rows="10" th:field="*{content}" ></textarea>
             </div>
             <br>
             <input type="file" name="file" id="file">
