회원비밀번호 찾기

--- a/src/main/resources/templates/member/login_form.html
+++ b/src/main/resources/templates/member/login_form.html
@@ -24,6 +24,7 @@
                 <input type="password" name="password" placeholder="Password">
                 <button type="submit" class="form_btn">로그인</button>
                 <a th:href="@{/member/regMember}"> <button type="button" class="form_btn">회원가입</button></a>
+                <a th:href="@{/member/memberFind}"> <button type="button" class="form_btn">회원정보 찾기</button></a>
             </form>
         </div>
     </div>
