--- a/src/main/resources/templates/noticeBoard/noticeInsert.html
+++ b/src/main/resources/templates/noticeBoard/noticeInsert.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -36,7 +37,7 @@
         </div>
         <div class="col-auto">
             <label th:for="title">작성자</label>
-            <input type="text" class="form-control"  th:field="*{author}">
+            <input type="text" class="form-control" th:value="${#authentication.getName()}" name="author">
             <br>
         </div>
         <br>
