--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -39,12 +39,16 @@
                                     <a sec:authorize="isAnonymous()" class="nav-link active text-white" aria-current="page" th:href="@{/member/login}">로그인</a>
                                     <a sec:authorize="isAuthenticated()" class="nav-link active text-white" aria-current="page" th:href="@{/member/logout}">로그아웃</a>
                                 </li>
-                                <li class="nav-item">
+                                <li sec:authorize="hasRole('ADMIN')" class="nav-item">
                                     <a class="nav-link active text-white" aria-current="page" th:href="@{/member/list}">회원목록</a>
                                 </li>
-                                <li class="nav-item">
+                                <li sec:authorize="!isAuthenticated()" class="nav-item">
                                     <a class="nav-link active text-white" aria-current="page" th:href="@{/member/regMember}">회원가입</a>
                                 </li>
+                                <li sec:authorize="isAuthenticated()" class="nav-item">
+                                    <a class="nav-link active text-white" aria-current="page" th:href="@{/member/myInfo}">회원정보</a>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
