goodsService, PG API portone

--- a/src/main/resources/templates/webtoon/detail.html
+++ b/src/main/resources/templates/webtoon/detail.html
@@ -26,6 +26,7 @@
 
         <button type="submit" class="btn btn-primary">삭제</button>
     </th:block>
+        <a th:href="@{/webtoon/list}" class="btn btn-primary">목록</a>
     </div>
 
     <th:block th:if="${webtoon.fileName}" >
