--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
                                 <a class="nav-link active text-white" aria-current="page" th:href="@{/webtoon/list}">웹툰</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">굿즈</a>
+                                <a class="nav-link text-white" th:href="@{/goods/list}">굿즈</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
