--- a/src/main/resources/templates/goods/list.html
+++ b/src/main/resources/templates/goods/list.html
@@ -1,32 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <th:block th:replace="fragments/header :: header"/>
+    <th:block th:replace="layouts/layout :: css"/>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+
+    <style>
+    .layout{
+        width: 70%;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    .write-btn{
+        margin-bottom: 10px;
+    }
+
+    img{
+        width: 150px;
+        height: 130px;
+    }
+
+    .border{
+        border: 1px solid black;
+        padding: 10px;
+        background-color: #f2f2f2;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+
+
+</style>
 </head>
+
 <body>
 
+<div class="container text-center ">
+    <div class="row">
+        <div th:each="list : ${goods}" class="col-md-2 my-4 py-3 mx-3 border ">
+            <a th:href="@{/goods/detail(id=${list.id})}" class="text-decoration-none d-block">
+                <th:block th:if="${list.fileName != null}">
+                    <img th:src="${list.filePath}" th:alt="${list.productName}">
+                </th:block>
+                <th:block th:if="${list.fileName == null}">
+                    <img src="/files/noImg.jpg" alt="그림이 없는 웹툰">
+                </th:block>
+                <div class="text-dark align-bottom">
+                   [[${list.productName}]]<br>
+                    <th:block th:text="${#numbers.formatInteger(list.price,3,'COMMA')+'원'}"/>
+                </div>
+                <div class="font-monospace text-sm-center text-danger">
+                    👍 : [[${list.likes}]]
+                </div>
+            </a>
+        </div>
+    </div>
 
-<div th:each="list : ${goods}">
-
-    <table>
-        <tr>
-            <th>물품번호</th>
-            <th>물품이름</th>
-            <th>물품가격</th>
-            <th>물품재고</th>
-        </tr>
-        <tr>
-           <td th:text="${list.productId}"></td>
-           <td th:text="${list.productName}"></td>
-           <td th:text="${list.amount}"></td>
-           <td th:text="${list.productsLeft}"></td>
-        </tr>
-    </table>
-
+    <div sec:authorize="isAuthenticated()">
+        <a th:href="@{/goods/productSell}" class="btn btn-success float-end">판매 등록</a>
+    </div>
 </div>
-
 
 
 </body>
