--- a/src/main/resources/templates/webtoon/list.html
+++ b/src/main/resources/templates/webtoon/list.html
@@ -73,7 +73,7 @@
         </ul>
 
         <th:block sec:authorize="isAuthenticated()">
-        <a class="btn btn-primary float-end" th:href="@{/webtoon/insert}">웹툰 업로드</a>
+            <a class="btn btn-success float-end" th:href="@{/webtoon/insert}">웹툰 업로드</a>
         </th:block>
     </div>
 
